<resources>
    <string name="app_name">MediFlow</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="create_new_password">Create new password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_new_password_must_be_unique_from_those_previously_used">Your new password must be unique from those previously used.</string>
    <string name="login">Login</string>
    <string name="successfully_registered">Successfully registered!</string>
    <string name="back_to_login">Back to Login</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="send_code">Send Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="agree_and_register">Agree and Register</string>
    <string name="you_already_have_an_account_log_in_now">You already have an account? Log in Now</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_appointments">My Appointments</string>
    <string name="profile">Profile</string>
    <string name="all_doctors">All Doctors</string>
    <string name="remember_password_login">Remember Password? Login</string>
    <string name="home">Home</string>
    <string name="appoitments">Appoitments</string>
    <string name="doctors">Doctors</string>
    <string name="profilee">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="welcome_to">Welcome to MediFlow!</string>
    <string name="register">Register</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="your_email_or_password_is_incorrect_please_try_again">Your email or password is incorrect! Please try again</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register Now</string>
    <string name="verify">Verify</string>
    <string name="didn_t_received_code_resend">Didn\'t received code? Resend</string>
    <string name="welcome_aboard_we_re_thrilled_to_have_you_join_us">Welcome aboard! We’re thrilled to have you join us!</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="_7_777_777_7777">+7 (777) 777-7777</string>
    <string name="hello">HELLO</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_name">Change Name</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_picture">Change Picture</string>
    <string name="edit_name">Edit Name</string>
    <string name="notifications">Notifications</string>
    <string name="change_contact">Change Contact</string>
    <string name="settings">Settings</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log out</string>

    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_message_are_you_sure">Are you sure?</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="select_a_language">Select a language:</string>
    <string name="apply">Apply</string>
    <string name="error">Error!!!</string>
    <string name="no_name">No Name</string>
    <string name="not_defined">Not Defined</string>
    <string name="permission_denied">You need permission to select a photo.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ai_assistant">AI Assistant</string>
    <string name="my_documents">My Documents</string>
    <string name="appointments">Appointments</string>
    <string name="doctor_information">Doctor Information:</string>
    <string name="enter_your_reason">Enter your reason</string>
    <string name="documents">Documents</string>
    <string name="download">Download</string>
</resources>