<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_hospital_current"
        android:title="@string/documents"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_current"
        android:title="@string/appointments"/>
    <item
        android:id="@+id/navigation_ai"
        android:icon="@drawable/ic_ai_assistant"
        android:title="@string/ai_assistant"/>

    <item
        android:id="@+id/navigation_doctors"
        android:icon="@drawable/ic_doctor_current"
        android:title="@string/doctors"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_current"
        android:title="@string/profile" />


</menu>