<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Текст с заголовком -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:padding="8dp"
            android:text="@string/change_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_rounded"
            android:drawablePadding="8dp"
            android:fontFamily="@font/urbanist_bold"
            android:hint="@string/enter_your_name"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textColorHint="#FF9E9E9E"
            android:textSize="16sp" />

        <!-- Кнопка сохранения -->
        <Button
            android:id="@+id/btnSaveName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded"
            android:fontFamily="@font/urbanist_bold"
            android:onClick="onClickToLogin"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>