<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterPage"
    >




    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="onClickToReturnWelcome"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return_back"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="55dp"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/welcome_aboard_we_re_thrilled_to_have_you_join_us"
        android:textColor="#1E232C"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Поле для ввода email -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_rounded"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_bold"
                android:hint="@string/enter_your_email"
                android:layout_marginTop="40dp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9E9E9E"
                android:textSize="16sp" />

            <!-- Блок для поля "пароль" с иконкой переключения -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Поле ввода пароля -->
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_rounded"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingEnd="48dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="#FF9E9E9E"
                    android:textSize="16sp" />

                <!-- Иконка (глаз) для переключения видимости пароля -->
                <ImageView
                    android:id="@+id/ivTogglePassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_eye_off" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Поле ввода пароля -->
                <EditText
                    android:id="@+id/etPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_rounded"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:hint="@string/confirm_your_password"
                    android:inputType="textPassword"
                    android:paddingEnd="48dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="#FF9E9E9E"
                    android:textSize="16sp" />

                <!-- Иконка (глаз) для переключения видимости пароля -->
                <ImageView
                    android:id="@+id/ivTogglePassword1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_eye_off" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_rounded"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_bold"
                android:hint="@string/enter_your_name"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9E9E9E"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_rounded"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_bold"
                android:hint="@string/_7_777_777_7777"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9E9E9E"
                android:textSize="16sp"
                android:maxLength="18" />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hello"
                android:textColor="#FF0000"
                android:visibility="gone"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="20dp"/>
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rounded"
                android:fontFamily="@font/urbanist_bold"
                android:onClick="onClickToLogin"
                android:text="@string/agree_and_register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/tvRegisterLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/you_already_have_an_account_log_in_now"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

