<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resetpassword.ForgotPassword">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/forgot_password"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="2dp"
        android:textColor="#1E232C"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account"
        android:textColor="#1E232C"
        android:textSize="28sp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Поле для ввода email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_rounded"
            android:drawablePadding="8dp"
            android:fontFamily="@font/urbanist_bold"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textColorHint="#FF9E9E9E"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rounded"
            android:fontFamily="@font/urbanist_bold"
            android:onClick="onClickToLogin"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="OnClick" />
        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textColor="#ff0000"
            android:layout_marginTop="16dp"
            android:text="@string/remember_password_login"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/remember_password_login"
            android:textSize="16sp" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="onClickToReturnWelcome"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return_back"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="55dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>