<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp"
    >
    <!-- Текст с заголовком -->
        <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:fontFamily="@font/urbanist_bold"
        android:textSize="30sp"
        android:padding="8dp"
        android:textAlignment="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Поле ввода пароля -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_bold"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:paddingEnd="48dp"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9E9E9E"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <!-- Иконка (глаз) для переключения видимости пароля -->
            <ImageView
                android:id="@+id/ivTogglePassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_eye_off" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Поле ввода пароля -->
            <EditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_bold"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:paddingEnd="48dp"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9E9E9E"
                android:textSize="16sp" />

            <!-- Иконка (глаз) для переключения видимости пароля -->
            <ImageView
                android:id="@+id/ivTogglePassword1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_eye_off" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rounded"
            android:fontFamily="@font/urbanist_bold"
            android:onClick="onClickToLogin"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            />

</LinearLayout>
