<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kz.olzhass.kolesa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        >

    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="kz.olzhass.kolesa.ui.calendar.CalendarFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_calendar" >


    </fragment>

    <fragment
        android:id="@+id/navigation_doctors"
        android:name="kz.olzhass.kolesa.ui.doctors.DoctorsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_doctors"
        >

        <action
            android:id="@+id/action_allSpecialties_to_doctorsBySpecialty"
            app:destination="@id/doctorsBySpecialtyFragment"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="kz.olzhass.kolesa.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_profileFragment_to_calendarFragment"
            app:destination="@+id/navigation_calendar"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true"/>



    </fragment>
    <fragment
        android:id="@+id/doctorsBySpecialtyFragment"
        android:name="kz.olzhass.kolesa.DoctorsBySpecialtyFragment"
        android:label="Doctors By Specialty"
        tools:layout="@layout/fragment_doctors_by_specialty"/>

    <fragment
        android:id="@+id/allSpecialtiesFragment"
        android:name="kz.olzhass.kolesa.AllSpecialtiesFragment"
        android:label="All Specialties"
        tools:layout="@layout/fragment_specific_doctors">
        <action
            android:id="@+id/action_allSpecialties_to_doctorsBySpecialty"
            app:destination="@id/doctorsBySpecialtyFragment"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="kz.olzhass.kolesa.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
    <action
        android:id="@+id/action_settingsFragment_to_profileFragment"
        app:destination="@id/navigation_profile" />
</navigation>