<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resetpassword.ResetPassword">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/create_new_password"
        android:layout_marginTop="18dp"
        android:textColor="#1E232C"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/your_new_password_must_be_unique_from_those_previously_used"
        android:textColor="#1E232C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Поле ввода пароля -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_bold"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingEnd="48dp"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9E9E9E"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <!-- Иконка (глаз) для переключения видимости пароля -->
            <ImageView
                android:id="@+id/ivTogglePassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_eye_off" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Поле ввода пароля -->
            <EditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_bold"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:paddingEnd="48dp"
                android:textColor="@android:color/black"
                android:textColorHint="#FF9E9E9E"
                android:textSize="16sp" />

            <!-- Иконка (глаз) для переключения видимости пароля -->
            <ImageView
                android:id="@+id/ivTogglePassword1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_eye_off" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rounded"
            android:fontFamily="@font/urbanist_bold"
            android:onClick="onClickToLogin"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="OnClick" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="onClickToReturnWelcome"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return_back"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="55dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>